--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Palma-Brava-10/">https://baay22.github.io/Palma-Brava-10/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Palma+Brava/Palma+Brava-10/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Palma+Brava/Palma+Brava-10/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Palma+Brava/Palma+Brava-10/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Palma+Brava/Palma+Brava-10/index.html</a><br>
+                <a target="_bLank" href="https://glittering-manatee-a033c4.netlify.app/">https://glittering-manatee-a033c4.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
